--- a/Web-sigma/package.json
+++ b/Web-sigma/package.json
@@ -13,7 +13,9 @@
     "graphology-gexf": "^0.10.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-animate-height": "^2.0.23",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
     "react-sigma": "^1.2.35",
     "sigma": "^2.4.0",
