--- a/Web-sigma/public/manifest.json
+++ b/Web-sigma/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "NoPixel-Overlap-Data",
+  "name": "NoPixel-Overlap-Data",
   "icons": [
     {
       "src": "favicon.ico",
