--- a/Web-sigma/package.json
+++ b/Web-sigma/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Web-sigma",
+  "name": "web-sigma",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://askepticaldreamer.github.io/np-overlap-data",
@@ -15,7 +15,7 @@
     "react": "^18.2.0",
     "react-animate-height": "^2.0.23",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "react-sigma": "^1.2.35",
     "sigma": "^2.4.0",
